Fix overflowing and centered tabs

--- a/scss/wwu2019/general.scss
+++ b/scss/wwu2019/general.scss
@@ -392,6 +392,11 @@ a:not([class]):focus,
         border: none;
         height: $moremenu-height;
         background-color: unset;
+
+        .nav-tabs {
+            max-width: unset;
+            margin: unset;
+        }
     }
 }
 
